--- a/.github/workflows/Build and Test.yml
+++ b/.github/workflows/Build and Test.yml
@@ -39,6 +39,7 @@ jobs:
           xcrun xcodebuild clean build build-for-testing \
             -workspace Xcode/SwiftProjectTemplateApp.xcworkspace \
             -scheme SwiftProjectTemplateApp \
+            -derivedDataPath ".build/Xcode.noindex/DerivedData" \
             -configuration "${{ matrix.swift-configuration }}" \
             -sdk "${{ matrix.xcode-configuration.sdk }}" \
             -destination "${{ matrix.xcode-configuration.destination }}"
@@ -48,9 +49,16 @@ jobs:
           xcrun xcodebuild test-without-building \
             -workspace Xcode/SwiftProjectTemplateApp.xcworkspace \
             -scheme SwiftProjectTemplateApp \
+            -derivedDataPath ".build/Xcode.noindex/DerivedData" \
             -configuration "${{ matrix.swift-configuration }}" \
             -sdk "${{ matrix.xcode-configuration.sdk }}" \
             -destination "${{ matrix.xcode-configuration.destination }}"
+
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v4
+        with:
+          name: Test Results
+          path: .build/Xcode.noindex/DerivedData/Logs/Test
       
       - name: Check that repository is clean
         run:
