Split up xcode and SwiftPM

--- a/.github/workflows/Build and Test (Xcode).yml
+++ b/.github/workflows/Build and Test (Xcode).yml
@@ -1,6 +1,6 @@
 # Build and Test
 
-name: Build and Test
+name: Build and Test (Xcode)
 on:
   workflow_dispatch:
   pull_request:
@@ -27,7 +27,7 @@ jobs:
     
     runs-on: macos-15
     
-    name: Build and Test (${{ matrix.xcode-configuration.name}}, ${{ matrix.swift-configuration }})
+    name: Build and Test (${{ matrix.xcode-configuration.name }}, ${{ matrix.swift-configuration }})
 
     steps:
       - name: Checkout
@@ -64,57 +64,4 @@ jobs:
       
       - name: Check that repository is clean
         run:
-          git diff --exit-code
-
-  build-and-test-devcontainer:
-
-    strategy:
-      matrix:
-        devcontainer-name: ["default"]
-        swift-configuration: ["debug", "release"]
-
-    name: Build and Test (devcontainer/${{ matrix.devcontainer-name }}, ${{ matrix.swift-configuration }})
-
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Make devcontainer '${{ matrix.devcontainer-name }}' singular
-        run: .devcontainer/devcontainer-helper --make-singular ${{ matrix.devcontainer-name }}
-      
-      - name: Initialize devcontainer
-        uses: devcontainers/ci@v0.3
-        with:
-          push: never
-          runCmd: |
-            echo "Devcontainer Initialized."
-      
-      - name: Build
-        uses: devcontainers/ci@v0.3
-        with:
-          push: never
-          runCmd: |
-            swift build --configuration ${{ matrix.swift-configuration }}
-
-      - name: Build Tests
-        if: matrix.swift-configuration == 'debug'
-        uses: devcontainers/ci@v0.3
-        with:
-          push: never
-          runCmd: |
-            swift build --build-tests --configuration ${{ matrix.swift-configuration }}
-
-      - name: Test
-        uses: devcontainers/ci@v0.3
-        if: matrix.swift-configuration == 'debug'
-        with:
-          push: never
-          runCmd: |
-            swift test --skip-build
-    
-      - name: Check that repository is clean
-        run:
-          .devcontainer/devcontainer-helper --clean
           git diff --exit-code
