--- a/.github/workflows/Specialize Template.yml
+++ b/.github/workflows/Specialize Template.yml
@@ -36,8 +36,7 @@ jobs:
           # Run specialization script (requires variables defined above)
           ./specialize-template.sh "$NEW_PROJECT_BUNDLE_ID_PREFIX" "$NEW_PROJECT_NAME"
         
-      # This is just for testing
-      - name: Specialize Template Parameters
+      - name: Test Specializing Template Parameters
         if: github.event.repository.name == 'SwiftProjectTemplate'
         run: |
           # Run specialization script (requires variables defined above)
