--- a/.github/workflows/Build and Test (Xcode App).yml
+++ b/.github/workflows/Build and Test (Xcode App).yml
@@ -18,17 +18,15 @@ jobs:
         xcode-configuration:
           - name: iOS Simulator
             destination: "platform=iOS Simulator,name=iPhone 16"
-            sdk: "iphonesimulator"
           - name: macOS
             destination: "platform=macOS"
-            sdk: "macosx"
-        swift-configuration:
-          - "debug"
-          - "release"
+        build-configuration:
+          - "Debug"
+          - "Release"
     
     runs-on: macos-15
     
-    name: Build and Test (${{ matrix.xcode-configuration.name }}, ${{ matrix.swift-configuration }})
+    name: Build and Test (${{ matrix.xcode-configuration.name }}, ${{ matrix.build-configuration }})
 
     steps:
       - name: Checkout
@@ -43,19 +41,17 @@ jobs:
             -workspace .xcode/SwiftProjectTemplate.xcworkspace \
             -scheme SwiftProjectTemplateApp \
             -derivedDataPath ".build/Xcode.noindex/DerivedData" \
-            -configuration "${{ matrix.swift-configuration }}" \
-            -sdk "${{ matrix.xcode-configuration.sdk }}" \
+            -configuration "${{ matrix.build-configuration }}" \
             -destination "${{ matrix.xcode-configuration.destination }}"
 
       - name: SwiftPM Tests
-        if: matrix.swift-configuration == 'debug'
+        if: matrix.build-configuration == 'Debug'
         run: |
           xcrun xcodebuild test \
             -workspace .xcode/SwiftProjectTemplate.xcworkspace \
             -scheme SwiftProjectTemplateAppPackage \
             -derivedDataPath ".build/Xcode.noindex/DerivedData" \
-            -configuration "${{ matrix.swift-configuration }}" \
-            -sdk "${{ matrix.xcode-configuration.sdk }}" \
+            -configuration "${{ matrix.build-configuration }}" \
             -destination "${{ matrix.xcode-configuration.destination }}"
 
       - name: UI Tests
@@ -64,14 +60,13 @@ jobs:
             -workspace .xcode/SwiftProjectTemplate.xcworkspace \
             -scheme SwiftProjectTemplateAppUITests \
             -derivedDataPath ".build/Xcode.noindex/DerivedData" \
-            -configuration "${{ matrix.swift-configuration }}" \
-            -sdk "${{ matrix.xcode-configuration.sdk }}" \
+            -configuration "${{ matrix.build-configuration }}" \
             -destination "${{ matrix.xcode-configuration.destination }}"
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
         with:
-          name: Test Results (${{ matrix.xcode-configuration.name }}, ${{ matrix.swift-configuration }})
+          name: Test Results (${{ matrix.xcode-configuration.name }}, ${{ matrix.build-configuration }})
           path: .build/Xcode.noindex/DerivedData/Logs/Test
       
       - name: Check that repository is clean
