--- a/.github/workflows/Build and Test (Xcode App).yml
+++ b/.github/workflows/Build and Test (Xcode App).yml
@@ -38,7 +38,7 @@ jobs:
       - name: Build
         run: |
           xcrun xcodebuild clean build \
-            -workspace .xcode/SwiftProjectTemplate.xcworkspace \
+            -workspace SwiftProjectTemplate.xcworkspace \
             -scheme SwiftProjectTemplateApp \
             -derivedDataPath ".build/Xcode.noindex/DerivedData" \
             -configuration "${{ matrix.build-configuration }}" \
@@ -48,7 +48,7 @@ jobs:
         if: matrix.build-configuration == 'Debug'
         run: |
           xcrun xcodebuild test \
-            -workspace .xcode/SwiftProjectTemplate.xcworkspace \
+            -workspace SwiftProjectTemplate.xcworkspace \
             -scheme SwiftProjectTemplateAppPackage \
             -derivedDataPath ".build/Xcode.noindex/DerivedData" \
             -configuration "${{ matrix.build-configuration }}" \
@@ -57,7 +57,7 @@ jobs:
       - name: UI Tests
         run: |
           xcrun xcodebuild test \
-            -workspace .xcode/SwiftProjectTemplate.xcworkspace \
+            -workspace SwiftProjectTemplate.xcworkspace \
             -scheme SwiftProjectTemplateAppUITests \
             -derivedDataPath ".build/Xcode.noindex/DerivedData" \
             -configuration "${{ matrix.build-configuration }}" \
