--- a/.github/workflows/Build and Test (Xcode App).yml
+++ b/.github/workflows/Build and Test (Xcode App).yml
@@ -28,10 +28,6 @@ jobs:
     
     name: Build and Test (${{ matrix.xcode-configuration.name }}, ${{ matrix.build-configuration }})
 
-    env:
-      # When we specialize this template, we don't have permissions to change workflows, so we cant reference the name of the project here.
-      project-name: ${{ github.repository.name }}
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -39,11 +35,16 @@ jobs:
       - name: Select Xcode
         run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode-version }}.app/Contents/Developer
 
+      # When we specialize this template, we don't have permissions to change workflows, so we cant reference the name of the project here.
+      - name: Get Repository Name
+        run: |
+          echo "REPO_NAME=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/}" >> $GITHUB_ENV
+
       - name: Build
         run: |
           xcrun xcodebuild clean build \
-            -workspace ${{ env.project-name }}.xcworkspace \
-            -scheme ${{ env.project-name }}App \
+            -workspace ${REPO_NAME}.xcworkspace \
+            -scheme ${REPO_NAME}App \
             -derivedDataPath ".build/Xcode.noindex/DerivedData" \
             -configuration "${{ matrix.build-configuration }}" \
             -destination "${{ matrix.xcode-configuration.destination }}"
@@ -51,9 +52,10 @@ jobs:
       - name: SwiftPM Tests
         if: matrix.build-configuration == 'Debug'
         run: |
+          REPO_NAME=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/}
           xcrun xcodebuild test \
-            -workspace ${{ env.project-name }}.xcworkspace \
-            -scheme ${{ env.project-name }}App \
+            -workspace ${REPO_NAME}.xcworkspace \
+            -scheme ${REPO_NAME}App \
             -derivedDataPath ".build/Xcode.noindex/DerivedData" \
             -configuration "${{ matrix.build-configuration }}" \
             -destination "${{ matrix.xcode-configuration.destination }}"
@@ -61,8 +63,8 @@ jobs:
       - name: UI Tests
         run: |
           xcrun xcodebuild test \
-            -workspace ${{ env.project-name }}.xcworkspace \
-            -scheme ${{ env.project-name }}App \
+            -workspace ${REPO_NAME}.xcworkspace \
+            -scheme ${REPO_NAME}App \
             -derivedDataPath ".build/Xcode.noindex/DerivedData" \
             -configuration "${{ matrix.build-configuration }}" \
             -destination "${{ matrix.xcode-configuration.destination }}"
