--- a/.github/workflows/Build and Test (Xcode App).yml
+++ b/.github/workflows/Build and Test (Xcode App).yml
@@ -35,6 +35,10 @@ jobs:
       - name: Select Xcode
         run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode-version }}.app/Contents/Developer
 
+      - name: Enable macros
+        run: |
+          defaults write com.apple.dt.Xcode IDESkipMacroFingerprintValidation -bool YES
+
       # When we specialize this template, we don't have permissions to change workflows, so we cant reference the name of the project here.
       - name: Get Repository Name
         run: |
@@ -52,7 +56,6 @@ jobs:
       - name: SwiftPM Tests
         if: matrix.build-configuration == 'Debug'
         run: |
-          REPO_NAME=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/}
           xcrun xcodebuild test \
             -workspace ${REPO_NAME}.xcworkspace \
             -scheme ${REPO_NAME}AppPackage \
